--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,231 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{kulkarni2022competition,
+  title={From Competition to Collaboration: Making Toy Datasets on Kaggle Clinically Useful for Chest X-Ray Diagnosis Using Federated Learning},
+  author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
+  journal={arXiv preprint arXiv:2211.06212},
+  year={2022}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{kulkarni2023surgical,
+  title={Surgical aggregation: A federated learning framework for harmonizing distributed datasets with diverse tasks},
+  author={Kulkarni, Pranav and Kanhere, Adway U and Paul, H Yi and Parekh, Vishwa S},
+  journal={CoRR},
+  year={2023}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
+@article{kulkarni2023optimizing,
+  title={Optimizing federated learning for medical image classification on distributed non-iid datasets with partial labels},
+  author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
+  journal={arXiv preprint arXiv:2303.06180},
+  year={2023}
+}
+
+@article{kulkarni2023text2cohort,
+  title={Text2Cohort: Democratizing the NCI Imaging Data Commons with Natural Language Cohort Discovery},
+  author={Kulkarni, Pranav and Kanhere, Adway U and Paul, H Yi and Parekh, Vishwa S},
+  journal={CoRR},
+  year={2023}
+}
+
+@article{kulkarni2023high,
+  title={High-throughput ai inference for medical image classification and segmentation using intelligent streaming},
+  author={Kulkarni, Pranav and Garin, Sean and Kanhere, Adway U and Siegel, Eliot and Yi, Paul H and Parekh, Vishwa S},
+  journal={CoRR},
+  year={2023}
+}
+
+@article{kulkarni2023one,
+  title={One Copy Is All You Need: Resource-Efficient Streaming of Medical Imaging Data at Scale},
+  author={Kulkarni, Pranav and Kanhere, Adway and Siegel, Eliot and Yi, Paul H and Parekh, Vishwa S},
+  journal={arXiv preprint arXiv:2307.00438},
+  year={2023}
+}
+
+@phdthesis{kanhere2023federated,
+  title={FEDERATED LEARNING BASED MEDICAL IMAGE SEGMENTATION FOR HETEROGENEOUS DATA SETS WITH PARTIAL ANNOTATIONS},
+  author={Kanhere, Adway U},
+  year={2023},
+  school={Johns Hopkins University}
+}
+
+@article{bachina2023coarse,
+  title={Coarse race and ethnicity labels mask granular underdiagnosis disparities in deep learning models for chest radiograph diagnosis},
+  author={Bachina, Preetham and Garin, Sean P and Kulkarni, Pranav and Kanhere, Adway and Sulam, Jeremias and Parekh, Vishwa S and Yi, Paul H},
+  journal={Radiology},
+  volume={309},
+  number={2},
+  pages={e231693},
+  year={2023},
+  publisher={Radiological Society of North America}
+}
+
+@article{doo2024evaluation,
+  title={Evaluation of climate-aware metrics tools for radiology informatics and artificial intelligence: toward a potential radiology ecolabel},
+  author={Doo, Florence X and Parekh, Vishwa S and Kanhere, Adway and Savani, Dharmam and Tejani, Ali S and Sapkota, Amir and Yi, Paul H},
+  journal={Journal of the American College of Radiology},
+  volume={21},
+  number={2},
+  pages={239--247},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{kulkarni2023surgical,
+  title={Surgical Aggregation: Federated Class-Heterogeneous Learning},
+  author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
+  journal={arXiv preprint arXiv:2301.06683},
+  year={2023}
+}
+
+@article{kulkarni2024anytime,
+  title={Anytime, anywhere, anyone: Investigating the feasibility of segment anything model for crowd-sourcing medical image annotations},
+  author={Kulkarni, Pranav and Kanhere, Adway and Savani, Dharmam and Chan, Andrew and Chatterjee, Devina and Yi, Paul H and Parekh, Vishwa S},
+  journal={arXiv preprint arXiv:2403.15218},
+  year={2024}
+}
+
+@article{kulkarni2024improving,
+  title={Improving Multi-Center Generalizability of GAN-Based Fat Suppression using Federated Learning},
+  author={Kulkarni, Pranav and Kanhere, Adway and Kukreja, Harshita and Zhang, Vivian and Yi, Paul H and Parekh, Vishwa S},
+  journal={arXiv preprint arXiv:2404.07374},
+  year={2024}
+}
+
+@article{zhao2024using,
+  title={Using Deep Learning to Predict Knee Osteoarthritis},
+  author={Zhao, Jerry and Kanhere, Adway and Kulkarni, Pranav and Chatterjee, Devina},
+  year={2024}
+}
+
+@inproceedings{kanhere2024privacy,
+  title={Privacy-Preserving Collaboration for Multi-Organ Segmentation via Federated Learning from Sites with Partial Labels},
+  author={Kanhere, Adway and Kulkarni, Pranav and Yi, Paul H and Parekh, Vishwa S},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={2380--2387},
+  year={2024}
+}
+
+@article{kulkarni2023text2cohort,
+  title={Text2Cohort: Facilitating Intuitive Access to Biomedical Data with Natural Language Cohort Discovery},
+  author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
+  journal={arXiv preprint arXiv:2305.07637},
+  year={2023}
+}
+
+@article{kulkarni2024isle,
+  title={ISLE: An Intelligent Streaming Framework for High-Throughput AI Inference in Medical Imaging},
+  author={Kulkarni, Pranav and Kanhere, Adway and Siegel, Eliot L and Yi, Paul H and Parekh, Vishwa S},
+  journal={Journal of Imaging Informatics in Medicine},
+  volume={37},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  pages={3250--3263},
+  year={2024},
+  publisher={Springer International Publishing Cham}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{kamel2024optimizing,
+  title={Optimizing Acute Stroke Segmentation on MRI Using Deep Learning: Self-Configuring Neural Networks Provide High Performance Using Only DWI Sequences},
+  author={Kamel, Peter and Kanhere, Adway and Kulkarni, Pranav and Khalid, Mazhar and Steger, Rachel and Bodanapally, Uttam and Gandhi, Dheeraj and Parekh, Vishwa and Yi, Paul H},
+  journal={Journal of Imaging Informatics in Medicine},
+  pages={1--10},
+  year={2024},
+  publisher={Springer International Publishing Cham}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{doo2024optimal,
+  title={Optimal large language model characteristics to balance accuracy and energy use for sustainable medical applications},
+  author={Doo, Florence X and Savani, Dharmam and Kanhere, Adway and Carlos, Ruth C and Joshi, Anupam and Yi, Paul H and Parekh, Vishwa S},
+  journal={Radiology},
+  volume={312},
+  number={2},
+  pages={e240320},
+  year={2024},
+  publisher={Radiological Society of North America}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{chatterjee2024children,
+  title={Children Are Not Small Adults: Addressing Limited Generalizability of an Adult Deep Learning CT Organ Segmentation Model to the Pediatric Population},
+  author={Chatterjee, Devina and Kanhere, Adway and Doo, Florence X and Zhao, Jerry and Chan, Andrew and Welsh, Alexander and Kulkarni, Pranav and Trang, Annie and Parekh, Vishwa S and Yi, Paul H},
+  journal={Journal of Imaging Informatics in Medicine},
+  pages={1--14},
+  year={2024},
+  publisher={Springer International Publishing Cham}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{kamel2024dual,
+  title={Dual Energy CT for Deep Learning-Based Segmentation and Volumetric Estimation of Early Ischemic Infarcts},
+  author={Kamel, Peter and Khalid, Mazhar and Steger, Rachel and Kanhere, Adway and Kulkarni, Pranav and Parekh, Vishwa and Yi, Paul H and Gandhi, Dheeraj and Bodanapally, Uttam},
+  journal={Journal of Imaging Informatics in Medicine},
+  pages={1--12},
+  year={2024},
+  publisher={Springer International Publishing Cham}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{kulkarni2025towards,
+  title={Towards Resource-Efficient Streaming of Large-Scale Medical Image Datasets for Deep Learning},
+  author={Kulkarni, Pranav and Kanhere, Adway and Siegel, Eliot and Yi, Paul and Parekh, Vishwa Sanjay},
+  booktitle={Medical Imaging with Deep Learning},
+  year={2025}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{savage2025open,
+  title={Open-Source Large Language Models in Radiology: A Review and Tutorial for Practical Research and Clinical Deployment},
+  author={Savage, Cody H and Kanhere, Adway and Parekh, Vishwa and Langlotz, Curtis P and Joshi, Anupam and Huang, Heng and Doo, Florence X},
+  journal={Radiology},
+  volume={314},
+  number={1},
+  pages={e241073},
+  year={2025},
+  publisher={Radiological Society of North America}
+}
+
+@article{kulkarni2024isolation,
+  title={From Isolation to Collaboration: Federated Class-Heterogeneous Learning for Chest X-Ray Classification},
+  author={Kulkarni, Pranav and Kanhere, Adway and Paul, H Yi and Parekh, Vishwa S},
+  year={2024}
+}
+
+@incollection{parekh2025expanding,
+  title={Expanding the federated horizon: cross-domain techniques for collective intelligence},
+  author={Parekh, Vishwa S and Kulkarni, Pranav and Kanhere, Adway and Jacobs, Michael A},
+  booktitle={Federated Learning for Medical Imaging},
+  pages={57--68},
+  year={2025},
+  publisher={Academic Press}
+}
+
+@article{navarathna2025artificial,
+  title={Artificial Intelligence in Pediatric Otolaryngology: A State-of-the-Art Review of Opportunities and Pitfalls},
+  author={Navarathna, Nithya and Kanhere, Adway and Gomez, Charlyn and Isaiah, Amal},
+  journal={International Journal of Pediatric Otorhinolaryngology},
+  pages={112369},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{yi2025pitfalls,
+  title={Pitfalls and Best Practices in Evaluation of AI Algorithmic Biases in Radiology},
+  author={Yi, Paul H and Bachina, Preetham and Bharti, Beepul and Garin, Sean P and Kanhere, Adway and Kulkarni, Pranav and Li, David and Parekh, Vishwa S and Santomartino, Samantha M and Moy, Linda and others},
+  journal={Radiology},
+  volume={315},
+  number={2},
+  pages={e241674},
+  year={2025},
+  publisher={Radiological Society of North America}
+}
+
+@article{kamel2025standardizing,
+  title={Standardizing Heterogeneous MRI Series Description Metadata Using Large Language Models},
+  author={Kamel, Peter I and Doo, Florence X and Savani, Dharmam and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
+  journal={Journal of Imaging Informatics in Medicine},
+  pages={1--11},
+  year={2025},
+  publisher={Springer International Publishing}
+}
+
+@article{kanhere2025upper,
+  title={Upper Airway Volume Predicts Brain Structure and Cognition in Adolescents},
+  author={Kanhere, Adway and Navarathna, Nithya and Yi, Paul H and Parekh, Vishwa S and Pickle, Jerrah and Cloak, Christine C and Ernst, Thomas and Chang, Linda and Li, Dongdong and Redline, Susan and others},
+  journal={American Journal of Respiratory and Critical Care Medicine},
+  number={ja},
+  year={2025}
 }
