--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -101,7 +101,9 @@
   author={Kanhere, Adway and Kulkarni, Pranav and Yi, Paul H and Parekh, Vishwa S},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   pages={2380--2387},
-  year={2024}
+  year={2024},
+  url={https://openaccess.thecvf.com/content/CVPR2024W/DCAMI/papers/Kanhere_Privacy-Preserving_Collaboration_for_Multi-Organ_Segmentation_via_Federated_Learning_from_Sites_CVPRW_2024_paper.pdf},
+  selected={true},
 }
 
 @article{kulkarni2023text2cohort,
@@ -190,7 +192,8 @@
   booktitle={Federated Learning for Medical Imaging},
   pages={57--68},
   year={2025},
-  publisher={Academic Press}
+  publisher={Academic Press},
+  url={https://www.sciencedirect.com/science/article/abs/pii/B9780443236419000145}
 }
 
 @article{navarathna2025artificial,
@@ -227,5 +230,7 @@
   author={Kanhere, Adway and Navarathna, Nithya and Yi, Paul H and Parekh, Vishwa S and Pickle, Jerrah and Cloak, Christine C and Ernst, Thomas and Chang, Linda and Li, Dongdong and Redline, Susan and others},
   journal={American Journal of Respiratory and Critical Care Medicine},
   number={ja},
-  year={2025}
+  year={2025},
+  url={https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
+  selected={true},
 }
