--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -104,6 +104,9 @@
   year={2024},
   url={https://openaccess.thecvf.com/content/CVPR2024W/DCAMI/papers/Kanhere_Privacy-Preserving_Collaboration_for_Multi-Organ_Segmentation_via_Federated_Learning_from_Sites_CVPRW_2024_paper.pdf},
   selected={true},
+  award={Best Poster Award, DCAMI Workshop@CVPR},
+  preview = {FlowerSegviz.png},
+  html = {https://flower.ai/blog/2025-02-24-university-of-maryland-blog-post/}
 }
 
 @article{kulkarni2023text2cohort,
@@ -233,4 +236,5 @@
   year={2025},
   url={https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
   selected={true},
+  preview = {AJRCCM.jepg},
 }
