--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -105,7 +105,8 @@
   url={https://openaccess.thecvf.com/content/CVPR2024W/DCAMI/papers/Kanhere_Privacy-Preserving_Collaboration_for_Multi-Organ_Segmentation_via_Federated_Learning_from_Sites_CVPRW_2024_paper.pdf},
   selected={true},
   award={Best Poster Award, DCAMI Workshop@CVPR},
-  preview = {FlowerSegviz.png},
+  preview = {FlowerSegViz.png},
+  code={https://github.com/BioIntelligence-Lab/Flower-Medicalsegmentation},
   html = {https://flower.ai/blog/2025-02-24-university-of-maryland-blog-post/}
 }
 
@@ -236,5 +237,5 @@
   year={2025},
   url={https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
   selected={true},
-  preview = {AJRCCM.jepg},
+  preview = {AJRCCM.jpeg},
 }
