--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -102,6 +102,7 @@
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   pages={2380--2387},
   year={2024},
+  abbr={CV/FL},
   url={https://openaccess.thecvf.com/content/CVPR2024W/DCAMI/papers/Kanhere_Privacy-Preserving_Collaboration_for_Multi-Organ_Segmentation_via_Federated_Learning_from_Sites_CVPRW_2024_paper.pdf},
   selected={true},
   award={Best Poster Award, DCAMI Workshop@CVPR},
@@ -235,6 +236,7 @@
   journal={American Journal of Respiratory and Critical Care Medicine},
   number={ja},
   year={2025},
+  abbr={Clinical},
   url={https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
   selected={true},
   preview = {AJRCCM.jpeg},
