updates to bib and about

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -232,7 +232,7 @@
 
 @article{kanhere2025upper,
   title={Upper Airway Volume Predicts Brain Structure and Cognition in Adolescents},
-  author={Kanhere, Adway and Navarathna, Nithya and Yi, Paul H and Parekh, Vishwa S and Pickle, Jerrah and Cloak, Christine C and Ernst, Thomas and Chang, Linda and Li, Dongdong and Redline, Susan and others},
+  author={Kanhere, Adway and Navarathna, Nithya and Yi, Paul H and Parekh, Vishwa S and Pickle, Jerrah and Cloak, Christine C and Ernst, Thomas and Chang, Linda and Li, Dongdong and Redline, Susan and Amal Isaiah},
   journal={American Journal of Respiratory and Critical Care Medicine},
   number={ja},
   year={2025},
