--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
   title={From Competition to Collaboration: Making Toy Datasets on Kaggle Clinically Useful for Chest X-Ray Diagnosis Using Federated Learning},
   author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2211.06212},
+  arxiv={2211.06212},
   year={2022}
 }
 
@@ -16,6 +17,7 @@
   title={Optimizing federated learning for medical image classification on distributed non-iid datasets with partial labels},
   author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2303.06180},
+  arxiv={2303.06180},
   year={2023}
 }
 
@@ -37,14 +39,16 @@
   title={One Copy Is All You Need: Resource-Efficient Streaming of Medical Imaging Data at Scale},
   author={Kulkarni, Pranav and Kanhere, Adway and Siegel, Eliot and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2307.00438},
-  year={2023}
+  year={2023},
+  arxiv={2307.00438}
 }
 
 @phdthesis{kanhere2023federated,
   title={FEDERATED LEARNING BASED MEDICAL IMAGE SEGMENTATION FOR HETEROGENEOUS DATA SETS WITH PARTIAL ANNOTATIONS},
   author={Kanhere, Adway U},
   year={2023},
-  school={Johns Hopkins University}
+  school={Johns Hopkins University},
+  html={https://jscholarship.library.jhu.edu/bitstream/1774.2/68551/1/KANHERE-THESIS-2023.pdf},
 }
 
 @article{bachina2023coarse,
@@ -73,21 +77,24 @@
   title={Surgical Aggregation: Federated Class-Heterogeneous Learning},
   author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2301.06683},
-  year={2023}
+  year={2023},
+  arxiv={2301.06683}
 }
 
 @article{kulkarni2024anytime,
   title={Anytime, anywhere, anyone: Investigating the feasibility of segment anything model for crowd-sourcing medical image annotations},
   author={Kulkarni, Pranav and Kanhere, Adway and Savani, Dharmam and Chan, Andrew and Chatterjee, Devina and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2403.15218},
-  year={2024}
+  year={2024},
+  arxiv={2403.15218}
 }
 
 @article{kulkarni2024improving,
   title={Improving Multi-Center Generalizability of GAN-Based Fat Suppression using Federated Learning},
   author={Kulkarni, Pranav and Kanhere, Adway and Kukreja, Harshita and Zhang, Vivian and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2404.07374},
-  year={2024}
+  year={2024},
+  arxiv={2404.07374}
 }
 
 @article{zhao2024using,
@@ -108,14 +115,15 @@
   award={Best Poster Award, DCAMI Workshop@CVPR},
   preview = {FlowerSegViz.png},
   code={https://github.com/BioIntelligence-Lab/Flower-Medicalsegmentation},
-  html = {https://flower.ai/blog/2025-02-24-university-of-maryland-blog-post/}
+  blog = {https://flower.ai/blog/2025-02-24-university-of-maryland-blog-post/}
 }
 
 @article{kulkarni2023text2cohort,
   title={Text2Cohort: Facilitating Intuitive Access to Biomedical Data with Natural Language Cohort Discovery},
   author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2305.07637},
-  year={2023}
+  year={2023},
+  arxiv={2305.07637}
 }
 
 @article{kulkarni2024isle,
