--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,44 +3,8 @@
   author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2211.06212},
   arxiv={2211.06212},
-  year={2022}
-}
-
-@article{kulkarni2023surgical,
-  title={Surgical aggregation: A federated learning framework for harmonizing distributed datasets with diverse tasks},
-  author={Kulkarni, Pranav and Kanhere, Adway U and Paul, H Yi and Parekh, Vishwa S},
-  journal={CoRR},
-  year={2023}
-}
-
-@article{kulkarni2023optimizing,
-  title={Optimizing federated learning for medical image classification on distributed non-iid datasets with partial labels},
-  author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
-  journal={arXiv preprint arXiv:2303.06180},
-  arxiv={2303.06180},
-  year={2023}
-}
-
-@article{kulkarni2023text2cohort,
-  title={Text2Cohort: Democratizing the NCI Imaging Data Commons with Natural Language Cohort Discovery},
-  author={Kulkarni, Pranav and Kanhere, Adway U and Paul, H Yi and Parekh, Vishwa S},
-  journal={CoRR},
-  year={2023}
-}
-
-@article{kulkarni2023high,
-  title={High-throughput ai inference for medical image classification and segmentation using intelligent streaming},
-  author={Kulkarni, Pranav and Garin, Sean and Kanhere, Adway U and Siegel, Eliot and Yi, Paul H and Parekh, Vishwa S},
-  journal={CoRR},
-  year={2023}
-}
-
-@article{kulkarni2023one,
-  title={One Copy Is All You Need: Resource-Efficient Streaming of Medical Imaging Data at Scale},
-  author={Kulkarni, Pranav and Kanhere, Adway and Siegel, Eliot and Yi, Paul H and Parekh, Vishwa S},
-  journal={arXiv preprint arXiv:2307.00438},
-  year={2023},
-  arxiv={2307.00438}
+  year={2022},
+  preview={MedNeurips.png}
 }
 
 @phdthesis{kanhere2023federated,
@@ -49,6 +13,7 @@
   year={2023},
   school={Johns Hopkins University},
   html={https://jscholarship.library.jhu.edu/bitstream/1774.2/68551/1/KANHERE-THESIS-2023.pdf},
+  preview={jhu_logo.png}
 }
 
 @article{bachina2023coarse,
@@ -59,7 +24,8 @@
   number={2},
   pages={e231693},
   year={2023},
-  publisher={Radiological Society of North America}
+  publisher={Radiological Society of North America},
+  preview={coarse_race.jpeg}
 }
 
 @article{doo2024evaluation,
@@ -70,7 +36,8 @@
   number={2},
   pages={239--247},
   year={2024},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  preview={climateawaretools.jpg}
 }
 
 @article{kulkarni2023surgical,
@@ -78,7 +45,8 @@
   author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2301.06683},
   year={2023},
-  arxiv={2301.06683}
+  arxiv={2301.06683},
+  preview={Isocollab.png}
 }
 
 @article{kulkarni2024anytime,
@@ -86,7 +54,8 @@
   author={Kulkarni, Pranav and Kanhere, Adway and Savani, Dharmam and Chan, Andrew and Chatterjee, Devina and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2403.15218},
   year={2024},
-  arxiv={2403.15218}
+  arxiv={2403.15218},
+  preview={anytime_anywhere.png}
 }
 
 @article{kulkarni2024improving,
@@ -94,7 +63,8 @@
   author={Kulkarni, Pranav and Kanhere, Adway and Kukreja, Harshita and Zhang, Vivian and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2404.07374},
   year={2024},
-  arxiv={2404.07374}
+  arxiv={2404.07374},
+  preview={MIDLFatSupp.png}
 }
 
 @article{zhao2024using,
@@ -112,7 +82,7 @@
   abbr={CV/FL},
   url={https://openaccess.thecvf.com/content/CVPR2024W/DCAMI/papers/Kanhere_Privacy-Preserving_Collaboration_for_Multi-Organ_Segmentation_via_Federated_Learning_from_Sites_CVPRW_2024_paper.pdf},
   selected={true},
-  award={Best Poster Award, DCAMI Workshop@CVPR},
+  award={Best Poster Award, DCAMI Workshop, CVPR 2024},
   preview = {FlowerSegViz.png},
   code={https://github.com/BioIntelligence-Lab/Flower-Medicalsegmentation},
   blog = {https://flower.ai/blog/2025-02-24-university-of-maryland-blog-post/}
@@ -123,7 +93,8 @@
   author={Kulkarni, Pranav and Kanhere, Adway and Yi, Paul H and Parekh, Vishwa S},
   journal={arXiv preprint arXiv:2305.07637},
   year={2023},
-  arxiv={2305.07637}
+  arxiv={2305.07637},
+  preview={text2cohort.png}
 }
 
 @article{kulkarni2024isle,
@@ -134,7 +105,8 @@
   number={6},
   pages={3250--3263},
   year={2024},
-  publisher={Springer International Publishing Cham}
+  publisher={Springer International Publishing Cham},
+  preview={ISLE.png}
 }
 
 @article{kamel2024optimizing,
@@ -143,7 +115,8 @@
   journal={Journal of Imaging Informatics in Medicine},
   pages={1--10},
   year={2024},
-  publisher={Springer International Publishing Cham}
+  publisher={Springer International Publishing Cham},
+  preview={Kameloptstroke.png}
 }
 
 @article{doo2024optimal,
@@ -154,7 +127,8 @@
   number={2},
   pages={e240320},
   year={2024},
-  publisher={Radiological Society of North America}
+  publisher={Radiological Society of North America},
+  preview={OptimalLLM.jpeg}
 }
 
 @article{chatterjee2024children,
@@ -163,7 +137,8 @@
   journal={Journal of Imaging Informatics in Medicine},
   pages={1--14},
   year={2024},
-  publisher={Springer International Publishing Cham}
+  publisher={Springer International Publishing Cham},
+  preview={PedspaperJIIM.png}
 }
 
 @article{kamel2024dual,
@@ -172,14 +147,16 @@
   journal={Journal of Imaging Informatics in Medicine},
   pages={1--12},
   year={2024},
-  publisher={Springer International Publishing Cham}
+  publisher={Springer International Publishing Cham},
+  preview={DualEnergyCTKamel.png}
 }
 
 @inproceedings{kulkarni2025towards,
   title={Towards Resource-Efficient Streaming of Large-Scale Medical Image Datasets for Deep Learning},
   author={Kulkarni, Pranav and Kanhere, Adway and Siegel, Eliot and Yi, Paul and Parekh, Vishwa Sanjay},
   booktitle={Medical Imaging with Deep Learning},
-  year={2025}
+  year={2025},
+  preview={MIST.png},
 }
 
 @article{savage2025open,
@@ -190,13 +167,15 @@
   number={1},
   pages={e241073},
   year={2025},
-  publisher={Radiological Society of North America}
+  publisher={Radiological Society of North America},
+  preview = {opensourceLLM_Savage.jpeg},
 }
 
 @article{kulkarni2024isolation,
   title={From Isolation to Collaboration: Federated Class-Heterogeneous Learning for Chest X-Ray Classification},
   author={Kulkarni, Pranav and Kanhere, Adway and Paul, H Yi and Parekh, Vishwa S},
-  year={2024}
+  year={2024},
+  preview={Isocollab.png},
 }
 
 @incollection{parekh2025expanding,
@@ -205,8 +184,10 @@
   booktitle={Federated Learning for Medical Imaging},
   pages={57--68},
   year={2025},
+  abbr={Book Chapter},
   publisher={Academic Press},
-  url={https://www.sciencedirect.com/science/article/abs/pii/B9780443236419000145}
+  url={https://www.sciencedirect.com/science/article/abs/pii/B9780443236419000145},
+  preview={MICCAIBook.jpg},
 }
 
 @article{navarathna2025artificial,
@@ -215,7 +196,8 @@
   journal={International Journal of Pediatric Otorhinolaryngology},
   pages={112369},
   year={2025},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  preview={PedsOTO.jpg}
 }
 
 @article{yi2025pitfalls,
@@ -226,7 +208,8 @@
   number={2},
   pages={e241674},
   year={2025},
-  publisher={Radiological Society of North America}
+  publisher={Radiological Society of North America},
+  preview={PedsOTO.jpg},
 }
 
 @article{kamel2025standardizing,
@@ -235,7 +218,8 @@
   journal={Journal of Imaging Informatics in Medicine},
   pages={1--11},
   year={2025},
-  publisher={Springer International Publishing}
+  publisher={Springer International Publishing},
+  preview={KamelSeriesDesc.png},
 }
 
 @article{kanhere2025upper,
