--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -187,7 +187,7 @@
   abbr={Book Chapter},
   publisher={Academic Press},
   url={https://www.sciencedirect.com/science/article/abs/pii/B9780443236419000145},
-  preview={MICCAIBook.jpg},
+  preview = {MICCAIBook.jpg},
 }
 
 @article{navarathna2025artificial,
@@ -197,7 +197,7 @@
   pages={112369},
   year={2025},
   publisher={Elsevier},
-  preview={PedsOTO.jpg}
+  preview = {PedsOTO.jpg}
 }
 
 @article{yi2025pitfalls,
@@ -209,7 +209,7 @@
   pages={e241674},
   year={2025},
   publisher={Radiological Society of North America},
-  preview={PedsOTO.jpg},
+  preview = {pitfallsRAD.webp},
 }
 
 @article{kamel2025standardizing,
@@ -219,7 +219,7 @@
   pages={1--11},
   year={2025},
   publisher={Springer International Publishing},
-  preview={KamelSeriesDesc.png},
+  preview = {KamelSeriesDesc.png},
 }
 
 @article{kanhere2025upper,
