--- a/_blog_posts/2025-06-08-distill.md
+++ b/_blog_posts/2025-06-08-distill.md
@@ -22,7 +22,6 @@ authors:
   - name: Adway Kanhere
     affiliations: Johns Hopkins University
 
-bibliography:
 # Optionally, you can add a table of contents to your post.
 # NOTES:
 #   - make sure that TOC names match the actual section names
@@ -51,4 +50,9 @@ bibliography:
 ## What's in a chai session?
 ---
 
+
+### Intro 
+
 What's in a chai session?
+
+--- 
