--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -176,7 +176,7 @@
   author={Kulkarni, Pranav and Kanhere, Adway and Paul, H Yi and Parekh, Vishwa S},
   year={2024},
   preview={Isocollab.png},
-  url = {https://raw.githubusercontent.com/mlresearch/v259/main/assets/kulkarni25a/kulkarni25a.pdf}
+  pdf = {https://raw.githubusercontent.com/mlresearch/v259/main/assets/kulkarni25a/kulkarni25a.pdf}
 }
 
 @incollection{parekh2025expanding,
