--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -80,7 +80,7 @@
   pages={2380--2387},
   year={2024},
   abbr={CV/FL},
-  url={https://openaccess.thecvf.com/content/CVPR2024W/DCAMI/papers/Kanhere_Privacy-Preserving_Collaboration_for_Multi-Organ_Segmentation_via_Federated_Learning_from_Sites_CVPRW_2024_paper.pdf},
+  html={https://openaccess.thecvf.com/content/CVPR2024W/DCAMI/papers/Kanhere_Privacy-Preserving_Collaboration_for_Multi-Organ_Segmentation_via_Federated_Learning_from_Sites_CVPRW_2024_paper.pdf},
   selected={true},
   award={Best Poster Award, DCAMI Workshop, CVPR 2024},
   preview = {FlowerSegViz.png},
@@ -187,7 +187,7 @@
   year={2025},
   abbr={Book Chapter},
   publisher={Academic Press},
-  url={https://www.sciencedirect.com/science/article/abs/pii/B9780443236419000145},
+  html={https://www.sciencedirect.com/science/article/abs/pii/B9780443236419000145},
   preview = {MICCAIBook.jpg},
 }
 
@@ -230,7 +230,7 @@
   number={ja},
   year={2025},
   abbr={Clinical},
-  url={https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
+  html = {https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
   selected={true},
   preview = {AJRCCM.jpeg},
 }
