dario theme fixed

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,8 @@
   journal={arXiv preprint arXiv:2211.06212},
   arxiv={2211.06212},
   year={2022},
-  preview={MedNeurips.png}
+  preview={MedNeurips.png},
+  abbr={MedNeurIPS}
 }
 
 @phdthesis{kanhere2023federated,
@@ -13,7 +14,8 @@
   year={2023},
   school={Johns Hopkins University},
   html={https://jscholarship.library.jhu.edu/bitstream/1774.2/68551/1/KANHERE-THESIS-2023.pdf},
-  preview={jhu_logo.png}
+  preview={jhu_logo.png},
+  abbr={Master's Thesis}
 }
 
 @article{bachina2023coarse,
@@ -25,7 +27,8 @@
   pages={e231693},
   year={2023},
   publisher={Radiological Society of North America},
-  preview={coarse_race.jpeg}
+  preview={coarse_race.jpeg},
+  abbr={Radiology}
 }
 
 @article{doo2024evaluation,
@@ -37,7 +40,8 @@
   pages={239--247},
   year={2024},
   publisher={Elsevier},
-  preview={climateawaretools.jpg}
+  preview={climateawaretools.jpg},
+  abbr={JACR}
 }
 
 @article{kulkarni2023surgical,
@@ -46,7 +50,8 @@
   journal={arXiv preprint arXiv:2301.06683},
   year={2023},
   arxiv={2301.06683},
-  preview={Isocollab.png}
+  preview={Isocollab.png},
+  abbr={PrePrint}
 }
 
 @article{kulkarni2024anytime,
@@ -55,7 +60,8 @@
   journal={arXiv preprint arXiv:2403.15218},
   year={2024},
   arxiv={2403.15218},
-  preview={anytime_anywhere.png}
+  preview={anytime_anywhere.png},
+  abbr={PrePrint}
 }
 
 @article{kulkarni2024improving,
@@ -64,7 +70,8 @@
   journal={arXiv preprint arXiv:2404.07374},
   year={2024},
   arxiv={2404.07374},
-  preview={MIDLFatSupp.png}
+  preview={MIDLFatSupp.png},
+  abbr={PrePrint}
 }
 
 @article{zhao2024using,
@@ -79,7 +86,7 @@
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   pages={2380--2387},
   year={2024},
-  abbr={CV/FL},
+  abbr={CVPR},
   html={https://openaccess.thecvf.com/content/CVPR2024W/DCAMI/papers/Kanhere_Privacy-Preserving_Collaboration_for_Multi-Organ_Segmentation_via_Federated_Learning_from_Sites_CVPRW_2024_paper.pdf},
   selected={true},
   award={Best Poster Award, DCAMI Workshop, CVPR 2024},
@@ -94,7 +101,8 @@
   journal={arXiv preprint arXiv:2305.07637},
   year={2023},
   arxiv={2305.07637},
-  preview={text2cohort.png}
+  preview={text2cohort.png},
+  abbr={PrePrint}
 }
 
 @article{kulkarni2024isle,
@@ -106,7 +114,8 @@
   pages={3250--3263},
   year={2024},
   publisher={Springer International Publishing Cham},
-  preview={ISLE.png}
+  preview={ISLE.png},
+  abbr={JIIM}
 }
 
 @article{kamel2024optimizing,
@@ -116,7 +125,8 @@
   pages={1--10},
   year={2024},
   publisher={Springer International Publishing Cham},
-  preview={Kameloptstroke.png}
+  preview={Kameloptstroke.png},
+  abbr={JIIM}
 }
 
 @article{doo2024optimal,
@@ -128,7 +138,8 @@
   pages={e240320},
   year={2024},
   publisher={Radiological Society of North America},
-  preview={OptimalLLM.jpeg}
+  preview={OptimalLLM.jpeg},
+  abbr={Radiology}
 }
 
 @article{chatterjee2024children,
@@ -138,7 +149,8 @@
   pages={1--14},
   year={2024},
   publisher={Springer International Publishing Cham},
-  preview={PedspaperJIIM.png}
+  preview={PedspaperJIIM.png},
+  abbr={JIIM}
 }
 
 @article{kamel2024dual,
@@ -148,7 +160,8 @@
   pages={1--12},
   year={2024},
   publisher={Springer International Publishing Cham},
-  preview={DualEnergyCTKamel.png}
+  preview={DualEnergyCTKamel.png},
+  abbr={JIIM}
 }
 
 @inproceedings{kulkarni2025towards,
@@ -157,6 +170,7 @@
   booktitle={Medical Imaging with Deep Learning},
   year={2025},
   preview={MIST.png},
+  abbr={MIDL}
 }
 
 @article{savage2025open,
@@ -169,6 +183,7 @@
   year={2025},
   publisher={Radiological Society of North America},
   preview = {opensourceLLM_Savage.jpeg},
+  abbr={Radiology}
 }
 
 @article{kulkarni2024isolation,
@@ -176,7 +191,8 @@
   author={Kulkarni, Pranav and Kanhere, Adway and Paul, H Yi and Parekh, Vishwa S},
   year={2024},
   preview={Isocollab.png},
-  pdf = {https://raw.githubusercontent.com/mlresearch/v259/main/assets/kulkarni25a/kulkarni25a.pdf}
+  pdf = {https://raw.githubusercontent.com/mlresearch/v259/main/assets/kulkarni25a/kulkarni25a.pdf},
+  abbr={PrePrint}
 }
 
 @incollection{parekh2025expanding,
@@ -185,10 +201,10 @@
   booktitle={Federated Learning for Medical Imaging},
   pages={57--68},
   year={2025},
-  abbr={Book Chapter},
   publisher={Academic Press},
   html={https://www.sciencedirect.com/science/article/abs/pii/B9780443236419000145},
   preview = {MICCAIBook.jpg},
+  abbr={MICCAI Book Chapter}
 }
 
 @article{navarathna2025artificial,
@@ -198,7 +214,8 @@
   pages={112369},
   year={2025},
   publisher={Elsevier},
-  preview = {PedsOTO.jpg}
+  preview = {PedsOTO.jpg},
+  abbr={IJPORL}
 }
 
 @article{yi2025pitfalls,
@@ -211,6 +228,7 @@
   year={2025},
   publisher={Radiological Society of North America},
   preview = {pitfallsRAD.webp},
+  abbr={Radiology}
 }
 
 @article{kamel2025standardizing,
@@ -221,6 +239,7 @@
   year={2025},
   publisher={Springer International Publishing},
   preview = {KamelSeriesDesc.png},
+  abbr={JIIM}
 }
 
 @article{kanhere2025upper,
@@ -229,8 +248,8 @@
   journal={American Journal of Respiratory and Critical Care Medicine},
   number={ja},
   year={2025},
-  abbr={Clinical},
-  html = {https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
+  abbr={The Blue Journal},
+  eprint = {https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
   selected={true},
   preview = {AJRCCM.jpeg},
 }
