--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -249,7 +249,7 @@
   number={ja},
   year={2025},
   abbr={The Blue Journal},
-  eprint = {https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
+  html = {https://www.atsjournals.org/doi/abs/10.1164/rccm.202409-1748OC},
   selected={true},
   preview = {AJRCCM.jpeg},
 }
