--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -215,7 +215,7 @@
   year={2025},
   publisher={Elsevier},
   preview = {PedsOTO.jpg},
-  abbr={IJPORL}
+  abbr={IJPORL Review}
 }
 
 @article{yi2025pitfalls,
