--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,7 +61,7 @@
   year={2024},
   arxiv={2403.15218},
   preview={anytime_anywhere.png},
-  abbr={PrePrint}
+  abbr={MIDL Short Paper}
 }
 
 @article{kulkarni2024improving,
@@ -71,7 +71,7 @@
   year={2024},
   arxiv={2404.07374},
   preview={MIDLFatSupp.png},
-  abbr={PrePrint}
+  abbr={MIDL Short Paper}
 }
 
 @article{zhao2024using,
